--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,9 +11,9 @@
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/source_listing']" skipLocationChange>Sources</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/source_adding']" skipLocationChange>Add Source</a>
-          </li>
+          </li> -->
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/stories_listing']" skipLocationChange>Stories</a>
           </li>
