--- a/src/app/form-modal/form-modal.component.html
+++ b/src/app/form-modal/form-modal.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="modal-footer" >
-      <button class="btn btn-outline-success" type="submit" (click)=onClick()>Submit Form</button>
+      <button class="btn btn-outline-success" type="submit">Submit Form</button>
       <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
     </div>
   </form>
