--- a/src/app/stories-listing/stories-listing.component.html
+++ b/src/app/stories-listing/stories-listing.component.html
@@ -17,6 +17,7 @@ Add Source: <button (click)="AddStoryModal()">Add Story</button>
       </ul>
       <button (click)="onDeleteStory(story.id)">Delete</button>
       <button (click)="onEditStory(story)"  >Edit</button>
+      <button (click)="EditStoryModal(story)">Edit Modal</button>
       <hr>
   </li>
 </ol>
