--- a/src/app/add-source/add-source.component.html
+++ b/src/app/add-source/add-source.component.html
@@ -18,23 +18,33 @@
      (click)="activeModal.dismiss('Cross click')">
     </button>
   </div>
-  <form [formGroup]="myForm" (ngSubmit)="addSource(myForm.value)">
+  <form [formGroup]="myForm" (ngSubmit)="addSource(source_passed,myForm.value)">
     <div class="modal-body">
       <div class="container">
         <div class="form-group">
           <label for="name">Source Name:</label>
-          <input type="text" 
+          <div *ngIf="source_passed==null; then addname else editname"></div>
+          <ng-template #addname><input type="text" class="form-control" formControlName="name"/></ng-template>
+          <ng-template #editname><input type="text" class="form-control" formControlName="name" [(ngModel)]="source_passed.name"/></ng-template>
+          <!-- <input type="text" 
             class="form-control"
-            formControlName="name" />
+            formControlName="name"
+            [(ngModel)]="source_passed.name"/> -->
         </div>
         <div class="form-group">
           <label for="url">Source URL:</label>
-          <input type="url" class="form-control" formControlName="url" >
+          <div *ngIf="source_passed==null; then addurl else editurl"></div>
+          <ng-template #addurl> <input type="url" class="form-control" formControlName="url" ></ng-template>
+          <ng-template #editurl><input type="url" class="form-control" formControlName="url"  [(ngModel)]="source_passed.url" ></ng-template>
+          <!-- <input type="url" class="form-control" formControlName="url"  [(ngModel)]="source_passed.url" > -->
         </div>
       </div>
     </div>
     <div class="modal-footer" >
-      <button class="btn btn-outline-success" type="submit" >Add Source</button>
+      <div *ngIf="source_passed==null; then thenBlock else elseBlock"></div>
+          <ng-template #thenBlock><button class="btn btn-outline-success" type="submit" >Add Source</button></ng-template>
+          <ng-template #elseBlock><button class="btn btn-outline-success" type="submit" >Edit Source</button></ng-template>
+      <!-- <button class="btn btn-outline-success" type="submit" >Add Source</button> -->
       <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
     </div>
   </form>
