--- a/src/app/source-listing/source-listing.component.html
+++ b/src/app/source-listing/source-listing.component.html
@@ -1,17 +1,16 @@
 Search: 
 <input type="text" [ngModel]="search_text" (ngModelChange)="searchingSources($event)">
 {{search_text}}
+<br>
+<div *ngIf="total_sources != null"><p>You have {{total_sources}} sources</p></div>
 <br><br>
 Add Source: <button (click)="AddSourceModal()">Add Source</button>
 <ol>
     <li *ngFor="let source of sources">
     <a href="{{source.url}}">{{source.name}}</a><br>
-    <button (click)="onDeleteSource(source.id)" >Delete</button>
-    <!-- <button (click)="onEditSource(source.id,source)" class="btn btn-secondary">Edit</button> -->
-    <button (click)="onEditSource(source)">Edit</button>
-    <a href='fetching/{{source.id}}' type="button">Fetch</a>
-    <button (click)="openDeleteModal(source.id)">Delete Modal</button>
-    <button (click)="EditSourceModal(source)">Edit Modal</button>
+    <a href='fetching/{{source.id}}' type="button" class="fetchBtn">Fetch</a>
+    <button (click)="openDeleteModal(source.id)" class="mx-3">Delete</button>
+    <button (click)="EditSourceModal(source)">Edit</button>
     <!-- <button class="btn btn-primary" (click)="openModal()">Open modal</button> -->
     
     </li>
