--- a/src/app/add-source/add-source.component.html
+++ b/src/app/add-source/add-source.component.html
@@ -17,9 +17,9 @@
             formControlName="name"
             [(ngModel)]="source_passed.name"/> -->
         </div>
-        <div *ngIf="m.name.touched && m.name.invalid" class="errormsg">
-        <span *ngIf="m.url.errors?.required" >!!Please enter the name</span>
-        <span *ngIf="m.name.errors?.minlength" > Name must be at least 5 characters long.</span>
+        <div *ngIf="sourceControl.name.touched && sourceControl.name.invalid" class="errormsg">
+        <span *ngIf="sourceControl.url.errors?.required" >!!Please enter the name</span>
+        <span *ngIf="sourceControl.name.errors?.minlength" > Name must be at least 5 characters long.</span>
         </div>
         <div class="form-group">
           <label for="url">Source URL:</label>
@@ -29,15 +29,15 @@
           <!-- <input type="url" class="form-control" formControlName="url"  [(ngModel)]="source_passed.url" > -->
         </div>
         <!-- <span *ngIf="url_check==false" class="errormsg">!!Please enter a valid url</span> -->
-        <div *ngIf="m.url.touched && m.url.invalid" class="errormsg">
-        <div *ngIf="m.url.errors?.required">!!Please provide url</div>
-        <div *ngIf="m.url.errors?.pattern" >Please provide valid url</div>
+        <div *ngIf="sourceControl.url.touched && sourceControl.url.invalid" class="errormsg">
+        <div *ngIf="sourceControl.url.errors?.required">!!Please provide url</div>
+        <div *ngIf="sourceControl.url.errors?.pattern" >Please provide valid url</div>
         </div>
       </div>
     </div>
     <div class="modal-footer" >
       <div *ngIf="source_passed==null; then thenBlock else elseBlock"></div>
-          <ng-template #thenBlock><button class="btn btn-outline-success" type="submit" >Add Source</button></ng-template>
+          <ng-template #thenBlock><button class="btn btn-outline-success" type="submit" [disabled]="!myForm.valid">Add Source</button></ng-template>
           <ng-template #elseBlock><button class="btn btn-outline-success" type="submit" >Edit Source</button></ng-template>
       <!-- <button class="btn btn-outline-success" type="submit" >Add Source</button> -->
       <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
