--- a/src/app/add-story/add-story.component.html
+++ b/src/app/add-story/add-story.component.html
@@ -13,6 +13,10 @@
           <ng-template #addtitle><input type="text" class="form-control"formControlName="title" /></ng-template>
           <ng-template #editTitle><input type="text" class="form-control"formControlName="title" [(ngModel)]="story_passed.title"/></ng-template>
         </div>
+        <div *ngIf="storyControl.title.touched && storyControl.title.invalid" class="errormsg">
+          <span *ngIf="storyControl.title.errors?.required" >!!Please enter the title</span>
+          <span *ngIf="storyControl.title.errors?.minlength" > Title must be at least 5 characters long.</span>
+          </div>
         <div class="form-group">
           <label for="body_text">Description:</label>
           <div *ngIf="story_passed==null; then addDescription else editDescription"></div>
@@ -25,6 +29,9 @@
               <ng-template #addDate><input type="date" class="form-control" formControlName="pub_date" /></ng-template>
               <ng-template #editDate><input type="date" class="form-control" formControlName="pub_date" [(ngModel)]="story_passed.pub_date"/></ng-template>
           </div>
+          <div *ngIf="storyControl.pub_date.touched && storyControl.pub_date.invalid" class="errormsg">
+            <span *ngIf="storyControl.pub_date.errors?.required" >!!Please enter the Published date</span>
+            </div>
         <div class="form-group">
             <label for="source_name">Source:</label>
             <div *ngIf="story_passed==null; then addSource else editSource"></div>
@@ -40,11 +47,18 @@
             </ng-template>
             
         </div> 
+        <div *ngIf="storyControl.source_name.touched && storyControl.source_name.invalid" class="errormsg">
+          <span *ngIf="storyControl.source_name.errors?.required" >!!Please select source</span>
+          </div>
         <div class="form-group">
             <label for="url">Story URL:</label>
             <div *ngIf="story_passed==null; then addUrl else editUrl"></div>
             <ng-template #addUrl><input type="url" class="form-control" formControlName="url" /></ng-template>
             <ng-template #editUrl><input type="url" class="form-control" formControlName="url" [(ngModel)]="story_passed.url"/></ng-template>
+          </div>
+          <div *ngIf="storyControl.url.touched && storyControl.url.invalid" class="errormsg">
+            <div *ngIf="storyControl.url.errors?.required">!!Please provide url</div>
+            <div *ngIf="storyControl.url.errors?.pattern" >Please provide valid url</div>
           </div>
         <div class="form-group">
             <label for="tagged_company">Tagged Companies:</label>
@@ -64,7 +78,7 @@
     </div>
     <div class="modal-footer" >
       <div *ngIf="story_passed==null; then thenBlock else elseBlock"></div>
-      <ng-template #thenBlock><button class="btn btn-outline-success" type="submit" >Add Story</button></ng-template>
+      <ng-template #thenBlock><button class="btn btn-outline-success" type="submit" [disabled]="!myForm.valid">Add Story</button></ng-template>
       <ng-template #elseBlock><button class="btn btn-outline-success" type="submit" >Edit Story</button></ng-template>
       <!-- <button class="btn btn-outline-success" type="submit" >Add Story</button> -->
       <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
