--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,9 +5,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['home']" skipLocationChange>Home</a>
-          </li>
+          </li> -->
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/source_listing']" skipLocationChange>Sources</a>
           </li>
@@ -15,7 +15,7 @@
             <a class="nav-link active" aria-current="page" [routerLink]="['/source_adding']" skipLocationChange>Add Source</a>
           </li> -->
             <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="['/stories_listing']" skipLocationChange>Stories</a>
+            <a class="nav-link active" aria-current="page" [routerLink]="['home']" skipLocationChange>Stories</a>
           </li>
         </ul>
       </div> 
